# Concurrent-word-corrector

./: .clang-format  CMakeLists.txt  format-diff.sh  format.sh
rapport/: Makefile  algo-schema.tex  rapport.tex
src/: IAsyncDictionary.hpp  IDictionary.hpp  async_dictionary.cpp  async_dictionary.hpp  bench.cpp  dictionary.cpp  dictionary.hpp  main.cpp  naive_async_dictionary.cpp  naive_async_dictionary.hpp  naive_dictionary.cpp  naive_dictionary.hpp  naive_tests.cpp  node.cpp  node.hpp  tests.cpp  tools.cpp  tools.hpp
